# aicacia

./: .env.template  .gitignore  .pre-commit-config.yaml  DEV_SETUP.md  Pipfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pyvenv.cfg  run_dev_server  run_migrations.sh
api/: Dockerfile  Dockerfile.dev  Pipfile  README.md  alembic.ini  compose.yml  pyproject.toml
api/db_migrations/: env.py
api/db_migrations/versions/: 2e9e85e8b1f8_add_document_related_tables.py  57292109b4c0_experiment_related_changes.py  7cd9e6312d1c_.py  851634203bde_add_index_in_email_column.py  9dec9905975c_add_is_relevant_field.py  a1b2c3d4e5f6_add_feedback_config_to_experiments.py  ad648a84e7b3_add_references_to_thread_messages.py  bd4d5e0c13ce_add_sourced_documents_table.py  c83507441c88_backlink_users_to_thread_messages.py
api/develop/: follow_server_logs  run_dev_server  upload_sqlite_data.py
api/server/: config.py  config.yaml  main.py  models.py
api/server/auth/: auth.py  dependencies.py
api/server/controllers/: base_controller.py  chat_controller.py  chat_feedback_controller.py  feedback_controller.py  hello_world_controller.py  my_new_controller.py  query_controller.py  user_controller.py  user_query_controller.py
api/server/core/: ai_agent.py  ai_summary.py  config.py  embedding_model.py  experiment_runner.py  rag_utils.py
api/server/db/: session.py
api/server/dtos/: chat.py  experiment.py  experiment_feedback.py  feedback.py  query.py  user.py
api/server/entities/: chat.py  feedback.py  thread_message.py
data_ingestion/: README.md  cli.py  pyproject.toml
data_ingestion/ingestion/: ingestion_handler.py
data_ingestion/parsing/: cli.py  parsing_handler.py  parsing_manager.py  types.py
data_ingestion/parsing/doc_loaders/: __init__.py  doc_loader.py  raw_doc_loader.py  tei_doc_loader.py
data_ingestion/parsing/document_loaders/: __init__.py  base_file_document.py  tei_file_document.py
data_ingestion/parsing/parsers/: __init__.py  abstract_parser.py  grobid_parser.py  pymupdf_parser.py
data_ingestion/parsing/readers/: __init__.py  (+1 more)
data_ingestion/scripts/: import_hj_andrews_bibliography.py
data_ingestion/types/: current_status_enum.py  llama_reader_wrapper.py  tei_document.py
db/: README.md  alembic.ini  pyproject.toml  session.py
db/db_migrations/: env.py
db/models/: base.py  query.py  sourced_documents.py  thread_messages.py
db/repositories/: base_model_repo.py  sourced_document_repo.py
extraction/: .gitignore  Makefile  README.md  compose.yml  pyproject.toml
extraction/grobid/: grobid.yaml
extraction/tests/: test_grobid_document.py  test_grobid_tei_document.py  test_marker_document.py
(+303 files in other folders)
