
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
  "core",
  "db",
  "data_ingestion",
  "api",
]

[tool.uv.sources]
core = { workspace = true }
db = { workspace = true }
data-ingestion = { workspace = true }
api = { workspace = true }

[project]
name = "aicacia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "core",
  "db",
  "data-ingestion",
  "api",
]


[tool.hatch.build.targets.wheel]
packages = ["core", "db", "data-ingestion", "api"]

