[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db"
version = "0.1.0"
dependencies = [
  "core>=0.1.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "sqlmodel>=0.0.31",
  "alembic>=1.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/db"]

# [dependency-groups]
# dev = [
#     "alembic>=1.11.1",
# ]

