[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "collaborative-earth", email = "team@collaborative.earth" }]
description = "Methods to support PDF extraction for the Aicacia project"
name = "aicacia_extraction"
version = "0.0.1"
dependencies = [
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "src" }
